tests/errors/compiler/coma_in_enum/coma_in_enum_class_3.c
enum class Name { a, b c};

int main() {
	return 0;
}
